Cleanup SV installer models